1)Добавили два TextView 2)Добавили EditText 3)Добавили Buton и Switch 4)Создали ещё один макет с несколькими EditText с атрибутами inputType: text, textPersonName, phone, number, textPassword, textEmailAddress и другие значения.   Добавить в проект элемент CalendarView. 5) Исправление замечаний от преподавателя.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,13 @@
 <resources>
     <string name="app_name">base_1919_1_1</string>
     <string name="buttonOne">Нажми меня</string>
+    <string name="hello_world">Hello\n World!</string>
+    <string name="text">random text</string>
+    <string name="text_two">У лукоморья дуб зелёный;\n Златая цепь на дубе том:\nИ днём и ночью кот учёный\n</string>
+    <string name="text_second">Любой текст</string>
+    <string name="name">Имя</string>
+    <string name="phone">введите телефон</string>
+    <string name="password">введите пароль</string>
+    <string name="nomer">введите номер</string>
+
 </resources>
